corpus/scope.txt
=====
Scope
=====

.MyString = 'hello'
{
  .MyString = 'goodbye'
}

{
  .MyString + ' hello'
}

.CompilerOptions     = '/c "%1" -o "%2"'

.IncPath            = 'libA/inc/'
{
  ^CompilerOptions   + ' /I"$IncPath$"'
}
-----
(source_file
 (assignment
  lhs: (usage (variable (identifier)))
  rhs: (string (single_quoted))
 )
 (array
  (assignment
   lhs: (usage (variable (identifier)))
   rhs: (string (single_quoted))
  )
 )
 (array
  (concatenation
   lhs: (usage (variable (identifier)))
   rhs: (string (single_quoted))
  )
 )
 (assignment
  lhs: (usage (variable (identifier)))
  rhs: (string
   (single_quoted)
   (placeholder number: (decimal))
   (single_quoted)
   (placeholder number: (decimal))
   (single_quoted)
  )
 )
 (assignment
  lhs: (usage (variable (identifier)))
  rhs: (string (single_quoted))
 )
 (array
  (concatenation
   lhs: (propagation (variable (identifier)))
   rhs: (string
    (single_quoted)
    (interpolation (identifier))
    (single_quoted)
   )
  )
 )
)
