test/corpus/assignment.txt
==========
Assignment
==========
.MyString = "$StringA$ FASTBuild user!"
.MyBool = true
.MyInt = 7
.MyArray = { "aaa", "bbb", "ccc" }
----------
(source_file
 (compound
  (usage (identifier))
  (assign (string
   (interpolation (identifier))
   (double_quoted)
  ))
 )
 (compound
  (usage (identifier))
  (assign (boolean))
 )
 (compound
  (usage (identifier))
  (assign (decimal))
 )
 (compound
  (usage (identifier))
  (assign (array
   (string (double_quoted))
   (string (double_quoted))
   (string (double_quoted))
  ))
 )
)
