test/corpus/compound.txt
========
Compound
========
.MyString = " there"
          + " FASTBuild user"
		  - "subtract"
-------------
(source_file
 (compound
  (usage (identifier))
  (assign (string (double_quoted)))
  (concatenate (string (double_quoted)))
  (subtract (string (double_quoted)))
 )
)
