test/corpus/for_each.txt
========
For Each
========
ForEach( .IncPath in .IncPaths )
{
  ^CompilerOptions   + ' /I"$IncPath$"'
}
--------
(source_file
 (function_call
  name: (identifier)
  arguments: (arguments
   (in
    left:  (usage (identifier))
    right: (usage (identifier))
   )
  )
  body: (array
   (compound
    (usage (identifier))
    (concat (string
     (single_quoted)
     (interpolation (identifier))
     (single_quoted)
    ))
   )
  )
 )
)
