test/corpus/function_call.txt
==============
Primitive Call
==============
FunctionA()
--------------
(source_file
 (function_call
  name: (identifier)
  arguments: (arguments)
 )
)

===========
Simple Call
===========
FunctionB   ( 'ALiteralString', .APreviouslyDeclaredString )
-----------
(source_file
 (function_call
  name: (identifier)
  arguments: (arguments
   (string (single_quoted))
   (usage (identifier))
  )
 )
)

=============
Function Call
=============
Library ( "mylib" .identifier )
{
	.LibrarianOutput = "out\libs\mylib.lib"
}
-------------
(source_file
 (function_call
  name: (identifier)
  arguments: (arguments
   (string (double_quoted))
   (usage (identifier))
  )
  body: (array
   (compound
	(usage (identifier))
	(assign (string (double_quoted)))
   )
  )
 )
)
