test/corpus/function_definition.txt
===================
Function Definition
===================
function FunctionA()
{
  Print( 'Hello' )
}

function FunctionB( .Arg .Arg2 )
{
  If( .Arg1 == .Arg2 )
  {
    Print( 'Equal' )
  }
}
-------------------
(source_file
 (function_definition
  name: (identifier)
  arguments: (arguments)
  body: (array
   (function_call
	name: (identifier)
	arguments: (arguments (string single_quoted: (single_quoted)))
   )
  )
 )
 (function_definition
  name: (identifier)
  arguments: (arguments
   (usage variable: (identifier))
   (usage variable: (identifier))
  )
  body: (array
   (function_call
	name: (identifier)
	arguments: (arguments
		(compare
		 left:  (usage variable: (identifier))
		 right: (usage variable: (identifier))
		)
    )
    body: (array
     (function_call
	  name: (identifier)
	  arguments: (arguments (string single_quoted: (single_quoted)))
	 )
    )
   )
  )
 )
)
